# parser

./: .gitignore  .travis.yml  Cargo.toml  MANIFEST.in  Makefile  README.md  README.rst  install-rust.sh  rust_setuptools.py  setup.py
docs/: Makefile  conf.py  index.rst  make.bat  markdown.rst  rust-notes.rst
rparser/: __init__.py  ast.py
src/: article.rs  common.rs  generator.rs  latex.rs  lib.rs  node.rs  paragraph.rs  parser.rs
src/article/: elements.rs  mod.rs  node.rs  parser.rs
src/common/: mod.rs  tree.rs
src/html/: mod.rs
src/markdown/: mod.rs  node.rs  parser.rs
tests/: bench.py  test_cases.py  test_render.py
