[package]
name = "rparser"
version = "0.1.12"
authors = ["Sergey Pashinin <sergey@pashinin.com>"]


[lib]
name = "rparser"
crate-type = ["dylib"]
# dylib, rlib, staticlib


[dependencies]
nom = "^2.0"
# pulldown-cmark = "*"

# cpython = "0.1"
# cpython = { git = "https://github.com/dgrunwald/rust-cpython.git" }
# cpython = { path = "/usr/data/local2/src/rust-cpython" }

[dependencies.cpython]
# path = "/usr/data/local2/src/rust-cpython"
git = "https://github.com/pashinin/rust-cpython.git"
# git = "https://github.com/dgrunwald/rust-cpython.git"
# version = "0.1"
default-features = false
# features = ["python27-sys"]
# features = ["python3-sys"]
# optional = true
# version = "0.1"



[features]
default = ["cpython/python3-sys"]
py2 = ["python", "cpython/python27-sys"]
py3 = ["python", "cpython/python3-sys"]
python = []
unstable = []
